Fix details appearance on narrow screens

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,7 +17,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  min-width: 460px;
+  min-width: 485px;
   font-size: 16px;
   background-color: $base;
 }
